retirei o botão de curriculo

--- a/src/styles/components/informationcontainer.sass
+++ b/src/styles/components/informationcontainer.sass
@@ -7,6 +7,7 @@
     background-color: variables.$bg-color-secondary
     padding: 1rem
     margin-bottom: 2rem
+    margin-top: 2.5rem
     text-align: left
     width: 80%
     border-radius: variables.$card-border-radius
